// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ses-domain with custom SPF values 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "SesDomain0A5DC5B8": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "DomainName": "example.com",
        "IncludeVerificationRecord": "true",
        "Serial": 1,
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "lifligcdksesdomainproviderProviderframeworkonEventEFBE5AD7",
            "Arn",
          ],
        },
      },
      "Type": "AWS::CloudFormation::CustomResource",
      "UpdateReplacePolicy": "Delete",
    },
    "lifligcdksesdomainproviderFunctionB62280C6": Object {
      "DependsOn": Array [
        "lifligcdksesdomainproviderFunctionServiceRoleDefaultPolicy378DC1DA",
        "lifligcdksesdomainproviderFunctionServiceRole4F119253",
      ],
      "Properties": Object {
        "Code": Object {
          "ZipFile": "exports.handler = async (event) => {
    const AWS = require(\\"aws-sdk\\");
    const ttl = \\"1800\\";
    const ses = new AWS.SES();
    const sesv2 = new AWS.SESV2();
    const domainName = event.ResourceProperties[\\"DomainName\\"];
    const includeVerificationRecord = event.ResourceProperties[\\"IncludeVerificationRecord\\"] == \\"true\\";
    const defaultConfigurationSetName = event.ResourceProperties[\\"DefaultConfigurationSetName\\"];
    if (!includeVerificationRecord) {
        console.log(\\"Excluding verification TXT record\\");
    }
    function createRoute53RecordSets(verificationToken, dkimTokens) {
        const records = [];
        if (includeVerificationRecord) {
            records.push({
                Name: \`_amazonses.\${domainName}.\`,
                Type: \\"TXT\\",
                ResourceRecords: [\`\\"\${verificationToken}\\"\`],
                TTL: ttl,
            });
        }
        for (const token of dkimTokens) {
            records.push({
                Name: \`\${token}._domainkey.\${domainName}.\`,
                Type: \\"CNAME\\",
                ResourceRecords: [\`\${token}.dkim.amazonses.com.\`],
                TTL: ttl,
            });
        }
        return records;
    }
    switch (event.RequestType) {
        case \\"Delete\\":
            const response = await ses
                .deleteIdentity({ Identity: domainName })
                .promise();
            console.log(\`ses.deleteIdentity: \${JSON.stringify(response)}\`);
            return {
                PhysicalResourceId: event.PhysicalResourceId,
            };
        case \\"Create\\":
        case \\"Update\\":
            // Idempotent.
            const response1 = await ses
                .verifyDomainIdentity({
                Domain: domainName,
            })
                .promise();
            console.log(\`ses.verifyDomainIdentity: \${JSON.stringify(response1)}\`);
            const verificationToken = response1[\\"VerificationToken\\"];
            // Idempotent.
            const response2 = await ses
                .verifyDomainDkim({ Domain: domainName })
                .promise();
            console.log(\`ses.verifyDomainDkim: \${JSON.stringify(response2)}\`);
            const dkimTokens = response2[\\"DkimTokens\\"];
            // Idempotent.
            const response3 = await sesv2
                .putEmailIdentityConfigurationSetAttributes({
                EmailIdentity: domainName,
                // ConfigurationSetName can be set to undefined to remove
                // the default configuration set from the identity.
                ConfigurationSetName: defaultConfigurationSetName,
            })
                .promise();
            console.log(\`sesv2.putEmailIdentityConfigurationSetAttributes \${JSON.stringify(response3)}\`);
            return {
                PhysicalResourceId: \`SesDomain\${domainName}\`,
                Data: {
                    Route53RecordSets: createRoute53RecordSets(verificationToken, dkimTokens),
                    VerificationToken: verificationToken,
                },
            };
    }
};",
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "lifligcdksesdomainproviderFunctionServiceRole4F119253",
            "Arn",
          ],
        },
        "Runtime": "nodejs16.x",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "lifligcdksesdomainproviderFunctionServiceRole4F119253": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "lifligcdksesdomainproviderFunctionServiceRoleDefaultPolicy378DC1DA": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "ses:DeleteIdentity",
                "ses:GetIdentityDkimAttributes",
                "ses:GetIdentityMailFromDomainAttributes",
                "ses:GetIdentityVerificationAttributes",
                "ses:SetIdentityDkimEnabled",
                "ses:SetIdentityMailFromDomain",
                "ses:VerifyDomainDkim",
                "ses:VerifyDomainIdentity",
                "ses:PutEmailIdentityConfigurationSetAttributes",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "lifligcdksesdomainproviderFunctionServiceRoleDefaultPolicy378DC1DA",
        "Roles": Array [
          Object {
            "Ref": "lifligcdksesdomainproviderFunctionServiceRole4F119253",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "lifligcdksesdomainproviderProviderframeworkonEventEFBE5AD7": Object {
      "DependsOn": Array [
        "lifligcdksesdomainproviderProviderframeworkonEventServiceRoleDefaultPolicy389AABE6",
        "lifligcdksesdomainproviderProviderframeworkonEventServiceRole23759D5D",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "45017ac1fb5b50dac36a255c328b0fe125f18a8e6d3689e188eab5e3a1bf8146.zip",
        },
        "Description": "AWS CDK resource provider framework - onEvent (Stack/liflig-cdk.ses-domain.provider/Provider)",
        "Environment": Object {
          "Variables": Object {
            "USER_ON_EVENT_FUNCTION_ARN": Object {
              "Fn::GetAtt": Array [
                "lifligcdksesdomainproviderFunctionB62280C6",
                "Arn",
              ],
            },
          },
        },
        "Handler": "framework.onEvent",
        "Role": Object {
          "Fn::GetAtt": Array [
            "lifligcdksesdomainproviderProviderframeworkonEventServiceRole23759D5D",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "lifligcdksesdomainproviderProviderframeworkonEventServiceRole23759D5D": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "lifligcdksesdomainproviderProviderframeworkonEventServiceRoleDefaultPolicy389AABE6": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "lifligcdksesdomainproviderFunctionB62280C6",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "lifligcdksesdomainproviderFunctionB62280C6",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "lifligcdksesdomainproviderProviderframeworkonEventServiceRoleDefaultPolicy389AABE6",
        "Roles": Array [
          Object {
            "Ref": "lifligcdksesdomainproviderProviderframeworkonEventServiceRole23759D5D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`ses-domain with default configuration set 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "SesDomain0A5DC5B8": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "DefaultConfigurationSetName": "exampleconfigset",
        "DomainName": "example.com",
        "IncludeVerificationRecord": "true",
        "Serial": 1,
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "lifligcdksesdomainproviderProviderframeworkonEventEFBE5AD7",
            "Arn",
          ],
        },
      },
      "Type": "AWS::CloudFormation::CustomResource",
      "UpdateReplacePolicy": "Delete",
    },
    "lifligcdksesdomainproviderFunctionB62280C6": Object {
      "DependsOn": Array [
        "lifligcdksesdomainproviderFunctionServiceRoleDefaultPolicy378DC1DA",
        "lifligcdksesdomainproviderFunctionServiceRole4F119253",
      ],
      "Properties": Object {
        "Code": Object {
          "ZipFile": "exports.handler = async (event) => {
    const AWS = require(\\"aws-sdk\\");
    const ttl = \\"1800\\";
    const ses = new AWS.SES();
    const sesv2 = new AWS.SESV2();
    const domainName = event.ResourceProperties[\\"DomainName\\"];
    const includeVerificationRecord = event.ResourceProperties[\\"IncludeVerificationRecord\\"] == \\"true\\";
    const defaultConfigurationSetName = event.ResourceProperties[\\"DefaultConfigurationSetName\\"];
    if (!includeVerificationRecord) {
        console.log(\\"Excluding verification TXT record\\");
    }
    function createRoute53RecordSets(verificationToken, dkimTokens) {
        const records = [];
        if (includeVerificationRecord) {
            records.push({
                Name: \`_amazonses.\${domainName}.\`,
                Type: \\"TXT\\",
                ResourceRecords: [\`\\"\${verificationToken}\\"\`],
                TTL: ttl,
            });
        }
        for (const token of dkimTokens) {
            records.push({
                Name: \`\${token}._domainkey.\${domainName}.\`,
                Type: \\"CNAME\\",
                ResourceRecords: [\`\${token}.dkim.amazonses.com.\`],
                TTL: ttl,
            });
        }
        return records;
    }
    switch (event.RequestType) {
        case \\"Delete\\":
            const response = await ses
                .deleteIdentity({ Identity: domainName })
                .promise();
            console.log(\`ses.deleteIdentity: \${JSON.stringify(response)}\`);
            return {
                PhysicalResourceId: event.PhysicalResourceId,
            };
        case \\"Create\\":
        case \\"Update\\":
            // Idempotent.
            const response1 = await ses
                .verifyDomainIdentity({
                Domain: domainName,
            })
                .promise();
            console.log(\`ses.verifyDomainIdentity: \${JSON.stringify(response1)}\`);
            const verificationToken = response1[\\"VerificationToken\\"];
            // Idempotent.
            const response2 = await ses
                .verifyDomainDkim({ Domain: domainName })
                .promise();
            console.log(\`ses.verifyDomainDkim: \${JSON.stringify(response2)}\`);
            const dkimTokens = response2[\\"DkimTokens\\"];
            // Idempotent.
            const response3 = await sesv2
                .putEmailIdentityConfigurationSetAttributes({
                EmailIdentity: domainName,
                // ConfigurationSetName can be set to undefined to remove
                // the default configuration set from the identity.
                ConfigurationSetName: defaultConfigurationSetName,
            })
                .promise();
            console.log(\`sesv2.putEmailIdentityConfigurationSetAttributes \${JSON.stringify(response3)}\`);
            return {
                PhysicalResourceId: \`SesDomain\${domainName}\`,
                Data: {
                    Route53RecordSets: createRoute53RecordSets(verificationToken, dkimTokens),
                    VerificationToken: verificationToken,
                },
            };
    }
};",
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "lifligcdksesdomainproviderFunctionServiceRole4F119253",
            "Arn",
          ],
        },
        "Runtime": "nodejs16.x",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "lifligcdksesdomainproviderFunctionServiceRole4F119253": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "lifligcdksesdomainproviderFunctionServiceRoleDefaultPolicy378DC1DA": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "ses:DeleteIdentity",
                "ses:GetIdentityDkimAttributes",
                "ses:GetIdentityMailFromDomainAttributes",
                "ses:GetIdentityVerificationAttributes",
                "ses:SetIdentityDkimEnabled",
                "ses:SetIdentityMailFromDomain",
                "ses:VerifyDomainDkim",
                "ses:VerifyDomainIdentity",
                "ses:PutEmailIdentityConfigurationSetAttributes",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "lifligcdksesdomainproviderFunctionServiceRoleDefaultPolicy378DC1DA",
        "Roles": Array [
          Object {
            "Ref": "lifligcdksesdomainproviderFunctionServiceRole4F119253",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "lifligcdksesdomainproviderProviderframeworkonEventEFBE5AD7": Object {
      "DependsOn": Array [
        "lifligcdksesdomainproviderProviderframeworkonEventServiceRoleDefaultPolicy389AABE6",
        "lifligcdksesdomainproviderProviderframeworkonEventServiceRole23759D5D",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "45017ac1fb5b50dac36a255c328b0fe125f18a8e6d3689e188eab5e3a1bf8146.zip",
        },
        "Description": "AWS CDK resource provider framework - onEvent (Stack/liflig-cdk.ses-domain.provider/Provider)",
        "Environment": Object {
          "Variables": Object {
            "USER_ON_EVENT_FUNCTION_ARN": Object {
              "Fn::GetAtt": Array [
                "lifligcdksesdomainproviderFunctionB62280C6",
                "Arn",
              ],
            },
          },
        },
        "Handler": "framework.onEvent",
        "Role": Object {
          "Fn::GetAtt": Array [
            "lifligcdksesdomainproviderProviderframeworkonEventServiceRole23759D5D",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "lifligcdksesdomainproviderProviderframeworkonEventServiceRole23759D5D": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "lifligcdksesdomainproviderProviderframeworkonEventServiceRoleDefaultPolicy389AABE6": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "lifligcdksesdomainproviderFunctionB62280C6",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "lifligcdksesdomainproviderFunctionB62280C6",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "lifligcdksesdomainproviderProviderframeworkonEventServiceRoleDefaultPolicy389AABE6",
        "Roles": Array [
          Object {
            "Ref": "lifligcdksesdomainproviderProviderframeworkonEventServiceRole23759D5D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`ses-domain with hosted zone 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "SesDomain0A5DC5B8": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "DomainName": "example.com",
        "IncludeVerificationRecord": "true",
        "Serial": 1,
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "lifligcdksesdomainproviderProviderframeworkonEventEFBE5AD7",
            "Arn",
          ],
        },
      },
      "Type": "AWS::CloudFormation::CustomResource",
      "UpdateReplacePolicy": "Delete",
    },
    "SesDomainRecordSetGroupF83CCA2C": Object {
      "Properties": Object {
        "HostedZoneId": "ABCDEF12345678",
        "RecordSets": Object {
          "Fn::GetAtt": Array [
            "SesDomain0A5DC5B8",
            "Route53RecordSets",
          ],
        },
      },
      "Type": "AWS::Route53::RecordSetGroup",
    },
    "SesDomainStaticRecordSetGroup5A3938AB": Object {
      "Properties": Object {
        "HostedZoneId": "ABCDEF12345678",
        "RecordSets": Array [
          Object {
            "Name": "example.com",
            "ResourceRecords": Array [
              "\\"v=spf1 include:amazonses.com ~all\\"",
            ],
            "TTL": "60",
            "Type": "TXT",
          },
        ],
      },
      "Type": "AWS::Route53::RecordSetGroup",
    },
    "lifligcdksesdomainproviderFunctionB62280C6": Object {
      "DependsOn": Array [
        "lifligcdksesdomainproviderFunctionServiceRoleDefaultPolicy378DC1DA",
        "lifligcdksesdomainproviderFunctionServiceRole4F119253",
      ],
      "Properties": Object {
        "Code": Object {
          "ZipFile": "exports.handler = async (event) => {
    const AWS = require(\\"aws-sdk\\");
    const ttl = \\"1800\\";
    const ses = new AWS.SES();
    const sesv2 = new AWS.SESV2();
    const domainName = event.ResourceProperties[\\"DomainName\\"];
    const includeVerificationRecord = event.ResourceProperties[\\"IncludeVerificationRecord\\"] == \\"true\\";
    const defaultConfigurationSetName = event.ResourceProperties[\\"DefaultConfigurationSetName\\"];
    if (!includeVerificationRecord) {
        console.log(\\"Excluding verification TXT record\\");
    }
    function createRoute53RecordSets(verificationToken, dkimTokens) {
        const records = [];
        if (includeVerificationRecord) {
            records.push({
                Name: \`_amazonses.\${domainName}.\`,
                Type: \\"TXT\\",
                ResourceRecords: [\`\\"\${verificationToken}\\"\`],
                TTL: ttl,
            });
        }
        for (const token of dkimTokens) {
            records.push({
                Name: \`\${token}._domainkey.\${domainName}.\`,
                Type: \\"CNAME\\",
                ResourceRecords: [\`\${token}.dkim.amazonses.com.\`],
                TTL: ttl,
            });
        }
        return records;
    }
    switch (event.RequestType) {
        case \\"Delete\\":
            const response = await ses
                .deleteIdentity({ Identity: domainName })
                .promise();
            console.log(\`ses.deleteIdentity: \${JSON.stringify(response)}\`);
            return {
                PhysicalResourceId: event.PhysicalResourceId,
            };
        case \\"Create\\":
        case \\"Update\\":
            // Idempotent.
            const response1 = await ses
                .verifyDomainIdentity({
                Domain: domainName,
            })
                .promise();
            console.log(\`ses.verifyDomainIdentity: \${JSON.stringify(response1)}\`);
            const verificationToken = response1[\\"VerificationToken\\"];
            // Idempotent.
            const response2 = await ses
                .verifyDomainDkim({ Domain: domainName })
                .promise();
            console.log(\`ses.verifyDomainDkim: \${JSON.stringify(response2)}\`);
            const dkimTokens = response2[\\"DkimTokens\\"];
            // Idempotent.
            const response3 = await sesv2
                .putEmailIdentityConfigurationSetAttributes({
                EmailIdentity: domainName,
                // ConfigurationSetName can be set to undefined to remove
                // the default configuration set from the identity.
                ConfigurationSetName: defaultConfigurationSetName,
            })
                .promise();
            console.log(\`sesv2.putEmailIdentityConfigurationSetAttributes \${JSON.stringify(response3)}\`);
            return {
                PhysicalResourceId: \`SesDomain\${domainName}\`,
                Data: {
                    Route53RecordSets: createRoute53RecordSets(verificationToken, dkimTokens),
                    VerificationToken: verificationToken,
                },
            };
    }
};",
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "lifligcdksesdomainproviderFunctionServiceRole4F119253",
            "Arn",
          ],
        },
        "Runtime": "nodejs16.x",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "lifligcdksesdomainproviderFunctionServiceRole4F119253": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "lifligcdksesdomainproviderFunctionServiceRoleDefaultPolicy378DC1DA": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "ses:DeleteIdentity",
                "ses:GetIdentityDkimAttributes",
                "ses:GetIdentityMailFromDomainAttributes",
                "ses:GetIdentityVerificationAttributes",
                "ses:SetIdentityDkimEnabled",
                "ses:SetIdentityMailFromDomain",
                "ses:VerifyDomainDkim",
                "ses:VerifyDomainIdentity",
                "ses:PutEmailIdentityConfigurationSetAttributes",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "lifligcdksesdomainproviderFunctionServiceRoleDefaultPolicy378DC1DA",
        "Roles": Array [
          Object {
            "Ref": "lifligcdksesdomainproviderFunctionServiceRole4F119253",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "lifligcdksesdomainproviderProviderframeworkonEventEFBE5AD7": Object {
      "DependsOn": Array [
        "lifligcdksesdomainproviderProviderframeworkonEventServiceRoleDefaultPolicy389AABE6",
        "lifligcdksesdomainproviderProviderframeworkonEventServiceRole23759D5D",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "45017ac1fb5b50dac36a255c328b0fe125f18a8e6d3689e188eab5e3a1bf8146.zip",
        },
        "Description": "AWS CDK resource provider framework - onEvent (Stack/liflig-cdk.ses-domain.provider/Provider)",
        "Environment": Object {
          "Variables": Object {
            "USER_ON_EVENT_FUNCTION_ARN": Object {
              "Fn::GetAtt": Array [
                "lifligcdksesdomainproviderFunctionB62280C6",
                "Arn",
              ],
            },
          },
        },
        "Handler": "framework.onEvent",
        "Role": Object {
          "Fn::GetAtt": Array [
            "lifligcdksesdomainproviderProviderframeworkonEventServiceRole23759D5D",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "lifligcdksesdomainproviderProviderframeworkonEventServiceRole23759D5D": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "lifligcdksesdomainproviderProviderframeworkonEventServiceRoleDefaultPolicy389AABE6": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "lifligcdksesdomainproviderFunctionB62280C6",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "lifligcdksesdomainproviderFunctionB62280C6",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "lifligcdksesdomainproviderProviderframeworkonEventServiceRoleDefaultPolicy389AABE6",
        "Roles": Array [
          Object {
            "Ref": "lifligcdksesdomainproviderProviderframeworkonEventServiceRole23759D5D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`ses-domain without hosted zone 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "SesDomain0A5DC5B8": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "DomainName": "example.com",
        "IncludeVerificationRecord": "true",
        "Serial": 1,
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "lifligcdksesdomainproviderProviderframeworkonEventEFBE5AD7",
            "Arn",
          ],
        },
      },
      "Type": "AWS::CloudFormation::CustomResource",
      "UpdateReplacePolicy": "Delete",
    },
    "lifligcdksesdomainproviderFunctionB62280C6": Object {
      "DependsOn": Array [
        "lifligcdksesdomainproviderFunctionServiceRoleDefaultPolicy378DC1DA",
        "lifligcdksesdomainproviderFunctionServiceRole4F119253",
      ],
      "Properties": Object {
        "Code": Object {
          "ZipFile": "exports.handler = async (event) => {
    const AWS = require(\\"aws-sdk\\");
    const ttl = \\"1800\\";
    const ses = new AWS.SES();
    const sesv2 = new AWS.SESV2();
    const domainName = event.ResourceProperties[\\"DomainName\\"];
    const includeVerificationRecord = event.ResourceProperties[\\"IncludeVerificationRecord\\"] == \\"true\\";
    const defaultConfigurationSetName = event.ResourceProperties[\\"DefaultConfigurationSetName\\"];
    if (!includeVerificationRecord) {
        console.log(\\"Excluding verification TXT record\\");
    }
    function createRoute53RecordSets(verificationToken, dkimTokens) {
        const records = [];
        if (includeVerificationRecord) {
            records.push({
                Name: \`_amazonses.\${domainName}.\`,
                Type: \\"TXT\\",
                ResourceRecords: [\`\\"\${verificationToken}\\"\`],
                TTL: ttl,
            });
        }
        for (const token of dkimTokens) {
            records.push({
                Name: \`\${token}._domainkey.\${domainName}.\`,
                Type: \\"CNAME\\",
                ResourceRecords: [\`\${token}.dkim.amazonses.com.\`],
                TTL: ttl,
            });
        }
        return records;
    }
    switch (event.RequestType) {
        case \\"Delete\\":
            const response = await ses
                .deleteIdentity({ Identity: domainName })
                .promise();
            console.log(\`ses.deleteIdentity: \${JSON.stringify(response)}\`);
            return {
                PhysicalResourceId: event.PhysicalResourceId,
            };
        case \\"Create\\":
        case \\"Update\\":
            // Idempotent.
            const response1 = await ses
                .verifyDomainIdentity({
                Domain: domainName,
            })
                .promise();
            console.log(\`ses.verifyDomainIdentity: \${JSON.stringify(response1)}\`);
            const verificationToken = response1[\\"VerificationToken\\"];
            // Idempotent.
            const response2 = await ses
                .verifyDomainDkim({ Domain: domainName })
                .promise();
            console.log(\`ses.verifyDomainDkim: \${JSON.stringify(response2)}\`);
            const dkimTokens = response2[\\"DkimTokens\\"];
            // Idempotent.
            const response3 = await sesv2
                .putEmailIdentityConfigurationSetAttributes({
                EmailIdentity: domainName,
                // ConfigurationSetName can be set to undefined to remove
                // the default configuration set from the identity.
                ConfigurationSetName: defaultConfigurationSetName,
            })
                .promise();
            console.log(\`sesv2.putEmailIdentityConfigurationSetAttributes \${JSON.stringify(response3)}\`);
            return {
                PhysicalResourceId: \`SesDomain\${domainName}\`,
                Data: {
                    Route53RecordSets: createRoute53RecordSets(verificationToken, dkimTokens),
                    VerificationToken: verificationToken,
                },
            };
    }
};",
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "lifligcdksesdomainproviderFunctionServiceRole4F119253",
            "Arn",
          ],
        },
        "Runtime": "nodejs16.x",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "lifligcdksesdomainproviderFunctionServiceRole4F119253": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "lifligcdksesdomainproviderFunctionServiceRoleDefaultPolicy378DC1DA": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "ses:DeleteIdentity",
                "ses:GetIdentityDkimAttributes",
                "ses:GetIdentityMailFromDomainAttributes",
                "ses:GetIdentityVerificationAttributes",
                "ses:SetIdentityDkimEnabled",
                "ses:SetIdentityMailFromDomain",
                "ses:VerifyDomainDkim",
                "ses:VerifyDomainIdentity",
                "ses:PutEmailIdentityConfigurationSetAttributes",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "lifligcdksesdomainproviderFunctionServiceRoleDefaultPolicy378DC1DA",
        "Roles": Array [
          Object {
            "Ref": "lifligcdksesdomainproviderFunctionServiceRole4F119253",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "lifligcdksesdomainproviderProviderframeworkonEventEFBE5AD7": Object {
      "DependsOn": Array [
        "lifligcdksesdomainproviderProviderframeworkonEventServiceRoleDefaultPolicy389AABE6",
        "lifligcdksesdomainproviderProviderframeworkonEventServiceRole23759D5D",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "45017ac1fb5b50dac36a255c328b0fe125f18a8e6d3689e188eab5e3a1bf8146.zip",
        },
        "Description": "AWS CDK resource provider framework - onEvent (Stack/liflig-cdk.ses-domain.provider/Provider)",
        "Environment": Object {
          "Variables": Object {
            "USER_ON_EVENT_FUNCTION_ARN": Object {
              "Fn::GetAtt": Array [
                "lifligcdksesdomainproviderFunctionB62280C6",
                "Arn",
              ],
            },
          },
        },
        "Handler": "framework.onEvent",
        "Role": Object {
          "Fn::GetAtt": Array [
            "lifligcdksesdomainproviderProviderframeworkonEventServiceRole23759D5D",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "lifligcdksesdomainproviderProviderframeworkonEventServiceRole23759D5D": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "lifligcdksesdomainproviderProviderframeworkonEventServiceRoleDefaultPolicy389AABE6": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "lifligcdksesdomainproviderFunctionB62280C6",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "lifligcdksesdomainproviderFunctionB62280C6",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "lifligcdksesdomainproviderProviderframeworkonEventServiceRoleDefaultPolicy389AABE6",
        "Roles": Array [
          Object {
            "Ref": "lifligcdksesdomainproviderProviderframeworkonEventServiceRole23759D5D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
